--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,48 @@
-.carru{
+/* .carru{
 max-width: 20%;
 height: auto;
 margin: 0px;
 padding: 0px;
 display: block;
-margin: auto;
+margin: auto; */
+
+/* Carrousel*/
+
+#slider{
+    margin: 0 auto;
+    width: 800px;
+    height: 500px;
+    overflow:hidden;
+    background-color: black;
+}
+/*Valores de las imagenes*/
+#slider img{
+    margin: 0 auto;
+    -moz-transition: opacity 2s;
+    -webkit-transition: opacity 2s;
+    transition: opacity 2s;
+    width: 800px;
+    height: 500px;
+    position: absolute;
+    opacity: 0;
+}
+/*Para que la primera imagen este activa al inicio*/
+#slider img:nth-child(1){
+    opacity: 1;
+}
+
+table{
+    margin: 0 auto;
+    width: 800px;
+    height: auto;
+    overflow:hidden;
+    background-color: white;
+    border: 0;
+}
+
+#izquierda{
+    text-align: right;
+}
+#derecha{
+    text-align: left;
 }
