--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,20 @@ li a.active, li a:hover{
 
 }
 .barra{
-        margin-top: 26px;
+        margin-top: 27px;
         margin-left: 570px;
+        line-height: 20px;
+
+}
+.filtro{
+        font-size: 30px;
+        color: #fcf9ed;
+        line-height: 20px;
+        float: right;
+        margin-top: 18px;
+        padding: 7px 16px;
+
+
+
 
 }
