--- a/css/inicio_sesion.css
+++ b/css/inicio_sesion.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #7ec986;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,4 +49,5 @@ button {
 
 button:hover {
     background-color: #306b34;
+    
 }
