--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@ nav{
 }
 
 nav ul{
-        float: left;
-        margin-right: 20px;
+        float: right;
+        margin-right: 30px;
 
 }
 nav ul li{
@@ -33,8 +33,8 @@ nav ul li{
 }
 nav ul li a{
         color: #fcf9ed;
-        font-size: 18px;
-        padding: 7px 13px;
+        font-size: 17px;
+        padding: 5px 10px;
         border-radius: 3px;
         
         text-decoration: none;
@@ -48,18 +48,38 @@ li a.active, li a:hover{
 
 }
 .barra{
+        
         margin-top: 27px;
-        margin-left: 570px;
+        margin-left: 400px;
         line-height: 20px;
+        width: 300px;
+        height: 27px;
+        border: #fcf9ed;
+        border-radius: 15px;
+        
+
+
 
 }
 .filtro{
         font-size: 30px;
         color: #fcf9ed;
         line-height: 20px;
-        float: right;
+        float: left;
         margin-top: 18px;
         padding: 7px 16px;
+
+
+
+
+}
+.lupa{
+        font-size: 20px;
+        color: #fcf9ed;
+        line-height: 20px;
+        right: 7px;
+        margin-top: 18px;
+        padding: 2px 12px;
 
 
 
