--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* .carru{
+.carru{
 max-width: 20%;
 height: auto;
 margin: 0px;
@@ -80,8 +80,4 @@ li a.active, li a:hover{
         right: 7px;
         margin-top: 18px;
         padding: 2px 12px;
-
-
-
-
 }
