--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 .carru{
 max-width: 20%;
 height: auto;
@@ -13,6 +14,26 @@ margin: auto;
         list-style: none;
         box-sizing: border-box;
 }
+header{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        z-index: 99;
+        background: #397f3e;
+}
+i{
+        color: #fcf9ed;
+        cursor: pointer;
+}
+header .buscador{
+        flex: 1;
+        position: relative;
+
+}
+/*
 nav{
         background: #397f3e;
         height: 80px;
@@ -47,20 +68,8 @@ li a.active, li a:hover{
 
 
 }
-.barra{
-        
-        margin-top: 27px;
-        margin-left: 400px;
-        line-height: 20px;
-        width: 300px;
-        height: 27px;
-        border: #fcf9ed;
-        border-radius: 15px;
-        
+*/
 
-
-
-}
 .filtro{
         font-size: 30px;
         color: #fcf9ed;
@@ -73,15 +82,30 @@ li a.active, li a:hover{
 
 
 }
-.lupa{
-        font-size: 20px;
-        color: #fcf9ed;
+
+
+/*
+.barra{
+        
+        margin-top: 27px;
+        margin-left: 400px;
         line-height: 20px;
-        right: 7px;
-        margin-top: 18px;
-        padding: 2px 12px;
-
-
-
-
+        width: 300px;
+        height: 30px;
+        border: #fcf9ed;
+        border-radius: 15px;
+        text-align: center;
+        font-size: larger;
+        
 }
+.buscador{
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        border-radius: 30px;
+        border: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+}
+*/      
