--- a/css/styles.css
+++ b/css/styles.css
@@ -16,23 +16,61 @@ margin: auto;
 }
 header{
         width: 100%;
-        height: 100px;
+        height: 70px;
         display: flex;
-        justify-content: space-between;
         align-items: center;
         position: fixed;
-        z-index: 99;
         background: #397f3e;
+        
 }
 i{
         color: #fcf9ed;
         cursor: pointer;
 }
-header .buscador{
-        flex: 1;
-        position: relative;
-
+.filtro{
+        font-size: 30px;
+        color: #fcf9ed;
+        
+        margin-left: 1300px;
+        margin-top: 1cm;
+        
 }
+.buscador input{
+        top: 20px;
+        border-radius: 20px;
+        border: none;
+        outline: none;
+        width: 325px;
+        height: 30px;
+        background: #fcf9ed;
+        font-size: larger;
+        text-align:center;
+        position: absolute;
+        padding-left: 5px;
+        margin-left: 700px;
+               
+}
+.buscador button{
+        cursor: pointer;
+        width: 30px;
+        height: 30px;
+        border-radius: 30px;
+        border: none;
+        position: absolute;
+        top: 20px;  
+        margin-left: 995px;
+        background:#397f3e;
+        transform: scale(0.9);
+}
+.buscador button:hover{
+        background:#306b34;
+        transition: .5s;
+}
+
+
+
+
+
 /*
 nav{
         background: #397f3e;
@@ -41,14 +79,14 @@ nav{
 }
 
 nav ul{
-        float: right;
+        
         margin-right: 30px;
 
 }
 nav ul li{
         display: inline-block;
-        line-height: 80px;
-        margin: 0 5px;
+        
+        
 
 
 }
@@ -70,18 +108,7 @@ li a.active, li a:hover{
 }
 */
 
-.filtro{
-        font-size: 30px;
-        color: #fcf9ed;
-        line-height: 20px;
-        float: left;
-        margin-top: 18px;
-        padding: 7px 16px;
 
-
-
-
-}
 
 
 /*
