--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,8 @@ i{
 .filtro{
         font-size: 30px;
         color: #fcf9ed;
-        
-        margin-left: 1300px;
-        margin-top: 1cm;
+        margin-left: 1%;
+        margin-top: 2%;
         
 }
 .buscador input{
@@ -47,7 +46,7 @@ i{
         text-align:center;
         position: absolute;
         padding-left: 5px;
-        margin-left: 700px;
+        margin-left: 32%;
                
 }
 .buscador button{
@@ -58,7 +57,7 @@ i{
         border: none;
         position: absolute;
         top: 20px;  
-        margin-left: 995px;
+        margin-left: 885px;
         background:#397f3e;
         transform: scale(0.9);
 }
@@ -66,6 +65,15 @@ i{
         background:#306b34;
         transition: .5s;
 }
+.is{
+        background: #397f3e;
+        height: 40px;
+        width: 40px;
+        color: #fcf9ed;
+    
+            
+}    
+
 
 
 
