--- a/css/styles.css
+++ b/css/styles.css
@@ -65,14 +65,29 @@ i{
         background:#306b34;
         transition: .5s;
 }
-.is{
-        background: #397f3e;
-        height: 40px;
-        width: 40px;
+header ul{
+        display: flex;
+        flex: 2;
+       
+
+}
+header ul li{
+        list-style: none;
+}
+header ul li a{
+        text-decoration: none;
         color: #fcf9ed;
-    
-            
-}    
+        font-weight: 600;
+        border-radius: 5px;
+        transform: scale(0.9);
+}
+li a.active, li a:hover{
+        background: #fcf9ed;
+        transition: .5s;
+        color: #397f3e;
+
+
+}
 
 
 
