--- a/css/styles.css
+++ b/css/styles.css
@@ -1,174 +1,92 @@
-
-.carru{
-max-width: 20%;
-height: auto;
-margin: 0px;
-padding: 0px;
-display: block;
-margin: auto;
-}
 *{
-        padding: 0;
-        margin: 0;
-        text-decoration: none;
-        list-style: none;
-        box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
-header{
-        width: 100%;
-        height: 70px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        position: fixed;
-        background: #397f3e;
-        
+
+.header{
+    background: #397f3e;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    height: 85px;
 }
+
 i{
-        color: #fcf9ed;
-        cursor: pointer;
+    cursor: pointer;
+    color: #fcf9ed;
+    
+
 }
 .filtro{
-        font-size: 50px;
-        color: #fcf9ed;
-        margin-left: 1%;
-        margin-top: 2%;
-        
-}
-.buscador input{
-        top: 20px;
-        border-radius: 20px;
-        border: none;
-        outline: none;
-        width: 325px;
-        height: 30px;
-        background: #fcf9ed;
-        font-size: larger;
-        text-align:center;
-        position: absolute;
-        padding-left: 5px;
-        margin-left: 32%;
-               
-}
-.buscador button{
-        cursor: pointer;
-        width: 30px;
-        height: 30px;
-        border-radius: 30px;
-        border: none;
-        position: absolute;
-        top: 20px;  
-        margin-left: 885px;
-        background:#397f3e;
-        transform: scale(0.9);
-}
-.buscador button:hover{
-        background:#306b34;
-        transition: .5s;
-}
-header ul{
-        display: flex;
-
-       
-
-}
-header ul li{
-        list-style: none;
-        position: absolute;
-        
-}
-header ul li a{
-        text-decoration: none;
-        color: #fcf9ed;
-        font-weight: 600;
-        border-radius: 5px;
-        transform: scale(0.9);
-}
-li a.active, li a:hover{
-        background: #fcf9ed;
-        transition: .5s;
-        color: #397f3e;
+    font-size: 35px;
+    align-items: center;
+    color: #fcf9ed;
+    padding: 10px;
 
 
 }
-/*
-.barra{
-        display:flex;
-        justify-content: space-around;
+.filtro:hover{
+    color: #fcf9ed;
+}
+input{
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    background:#fcf9ed;
+    text-align: center;
+    font-size:larger;
+    width: 400px; 
+    height: 35px;  
+}
+.boton{
+    background-color: #306b34;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    border-radius: 30px;
+    border: none;
+
 }
 
-/*
- para usar flexbox
-{
-        display:flex;
-        justify-content: space-around;
-}
-*/
-
-
-
-/*
-nav{
-        background: #397f3e;
-        height: 80px;
-        width: 100%;
+.header .btn button{
+    font-weight: 700;
+    margin-left: 20px;
+    color: #397f3e;
+    padding: 9px 25px;
+    background: #fcf9ed;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    
+   
 }
 
-nav ul{
-        
-        margin-right: 30px;
-
+.header .btn button:hover{
+    background: #fcf9ed;
+    color: #306b34;
+    transform: scale(1.1);
 }
-nav ul li{
-        display: inline-block;
-        
-        
 
-
+.link a{
+    text-decoration: none;
+    color: #397f3e;
+    display: block;
+    padding: 5px;
 }
-nav ul li a{
-        color: #fcf9ed;
-        font-size: 17px;
-        padding: 5px 10px;
-        border-radius: 3px;
-        
-        text-decoration: none;
-
+.link{
+    background-color: #fcf9ed;
+    width: 180px;
+    display: none;
 }
-li a.active, li a:hover{
-        background: #fcf9ed;
-        transition: .5s;
-        color: #397f3e;
-
-
+.link a:hover{
+    background-color: #397f3e;
+    color: #fcf9ed  ;
 }
-*/
-
-
-
-
-/*
-.barra{
-        
-        margin-top: 27px;
-        margin-left: 400px;
-        line-height: 20px;
-        width: 300px;
-        height: 30px;
-        border: #fcf9ed;
-        border-radius: 15px;
-        text-align: center;
-        font-size: larger;
-        
+.desplegable:hover .link{
+    margin-top: 150px;
+    display: block;
+    align-self: flex-end;
 }
-.buscador{
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-        border-radius: 30px;
-        border: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-}
-*/      
