--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-
+/*
 .carru{
 max-width: 20%;
 height: auto;
@@ -7,7 +7,7 @@ padding: 0px;
 display: block;
 margin: auto;
 }
-
+*/
 *{
   padding: 0px;
   margin: 0px;
