--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,100 @@
-.carru{
-max-width: 20%;
-height: auto;
-margin: 0px;
-padding: 0px;
-display: block;
-margin: auto;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
 
-/* inicio sesion*/
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
+.header{
+    background: #397f3e;
+    display: flex; 
+    justify-content: space-between;
     align-items: center;
-    height: 500px;
-    
+    height: 85px;
 }
 
-.login-container {
-    background-color: white;
-    padding: 50px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    text-align: center;
-}
-
-h2 {
-    margin-bottom: 20px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    text-align: left;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #397f3e;
-    color: white;
-    border: none;
-    border-radius: 4px;
+i{
     cursor: pointer;
+    color: #fcf9ed;
+    
+
+}
+.filtro{
+    font-size: 35px;
+    align-items: center;
+    color: #fcf9ed;
+    padding: 10px;
+
+
+}
+.carrito {
+    font-size: 20px;
+    align-items: center;
+    color: #397f3e;
+    padding: 10px;
+
+
+}
+.filtro:hover{
+    color: #fcf9ed;
+}
+input{
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    background:#fcf9ed;
+    text-align: center;
+    font-size:larger;
+    width: 400px; 
+    height: 35px;  
+}
+.boton{
+    background-color: #306b34;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    border-radius: 30px;
+    border: none;
+
 }
 
-button:hover {
-    background-color: #306b34;
+.header .btn button{
+    font-weight: 700;
+    margin-left: 20px;
+    color: #397f3e;
+    padding: 9px 25px;
+    background: #fcf9ed;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    
+   
+}
+
+.header .btn button:hover{
+    background: #fcf9ed;
+    color: #306b34;
+    transform: scale(1.1);
+}
+
+.link a{
+    text-decoration: none;
+    color: #397f3e;
+    display: block;
+    padding: 5px;
+}
+.link{
+    background-color: #fcf9ed;
+    width: 180px;
+    display: none;
+}
+.link a:hover{
+    background-color: #397f3e;
+    color: #fcf9ed  ;
+}
+.desplegable:hover .link{
+    margin-top: 150px;
+    display: block;
+    align-self: flex-end;
 }
