--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,21 @@
 
 i{
     cursor: pointer;
-    color: #fcf9ed;
+    color: #397f3e;
     
 
 }
+
 .filtro{
     font-size: 35px;
     align-items: center;
     color: #fcf9ed;
     padding: 10px;
-
+    transition: all 0.3s ease 0s;
 
 }
 .filtro:hover{
-    color: #fcf9ed;
+    transform: scale(1.1);
 }
 input{
     border-radius: 30px;
@@ -41,15 +42,20 @@ input{
     height: 35px;  
 }
 .boton{
-    background-color: #306b34;
+    background-color: #fcf9ed;
     cursor: pointer;
     width: 35px;
     height: 35px;
     border-radius: 30px;
     border: none;
+    transition: all 0.3s ease 0s;
 
 }
+.boton:hover{
+   
+    transform: scale(1.1);
 
+}
 .header .btn button{
     font-weight: 700;
     margin-left: 20px;
@@ -70,34 +76,18 @@ input{
     transform: scale(1.1);
 }
 
-/*
-.link a{
-    text-decoration: none;
-    color: #397f3e;
-    display: block;
-    padding: 5px;
-}
-.link{
-    background-color: #fcf9ed;
-    width: 180px;
-    display: none;
-}
-.link a:hover{
-    background-color: #397f3e;
-    color: #fcf9ed  ;
-}
-.desplegable:hover .link{
-    margin-top: 150px;
-    display: block;
-    align-self: flex-end;
-}
-*/
+
+
 
 /*se despliega menu al pasar el mouse*/
 .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0;
+    background:#fcf9ed;
+    
+    
 }
+/*
 .dropdown.toggle ::after{
     display: none;
 }
