--- a/css/footer.css
+++ b/css/footer.css
@@ -152,7 +152,7 @@ ul {
   margin-left: 20px;
   }
   .footer-menu li:hover a{
-  color: #ff5e14;
+  color: #7ec986;
   }
   .footer-menu li a {
   font-size: 14px;
