--- a/css/Carrusel.css
+++ b/css/Carrusel.css
@@ -3,6 +3,7 @@
   position: relative;
   overflow: hidden;
   padding: 20px;
+  overflow-x: hidden;
 }
 
 .product-category {
@@ -16,7 +17,7 @@
 .product-container {
   padding: 0 10vw;
   display: flex;
-  overflow-x: auto;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
@@ -34,7 +35,7 @@
 .product-image {
   position: relative;
   width: 100%;
-  height: 350px;
+  height: 300px;
   overflow: hidden;
 }
 
@@ -124,7 +125,7 @@
   align-items: center;
   background: rgba(255, 255, 255, 0);
   cursor: pointer;
-  z-index: 8;
+  z-index: 8 ;
 }
 
 .pre-btn {
@@ -178,3 +179,4 @@
   grid-column: span 2;
   margin-bottom: 10px;
 }
+
