--- a/css/Carrusel.css
+++ b/css/Carrusel.css
@@ -11,6 +11,7 @@
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 40px;
+  font-weight: bolder;
   text-transform: capitalize;
 }
 
@@ -90,6 +91,8 @@
 
 .product-brand {
   text-transform: uppercase;
+  font-weight: normal;
+  font-size:larger
 }
 
 .product-short-description {
