--- a/css/carrito.css
+++ b/css/carrito.css
@@ -6,6 +6,8 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
     background-color: #397f3e;
     color: #fcf9ed;
     padding: 10px;
@@ -64,7 +66,8 @@ main {
 }
 .boton{
     font-weight: 700;
-    margin-left: 20px;
+    margin-left: 50px;
+    margin-right: 90%;
     color: #397f3e;
     padding: 9px 25px;
     background: #fcf9ed;
@@ -72,6 +75,7 @@ main {
     border-radius: 30px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+
 }.boton:hover{
     background: #fcf9ed;
     color: #306b34;
