--- a/faq/css/faq.css
+++ b/faq/css/faq.css
@@ -22,10 +22,10 @@ main {
 }
 
 .titulo {
-	color: #3a3a3a;
+	color: #fcf9ed;
 	font-weight: 700;
 	text-align: center;
-	margin: 60px 0;
+	
 }
 header {
     display: flex;
@@ -34,7 +34,7 @@ header {
     color: #fcf9ed;
     padding: 10px;
     text-align: center;
-	height: 80px;
+	height: 70px;
 }
 .boton{
     background-color: #fcf9ed;
@@ -61,7 +61,7 @@ i{
 /*! =================================================*/
 .categorias {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
 	margin-bottom: 60px;
 }
