--- a/Productos/productos.css
+++ b/Productos/productos.css
@@ -171,3 +171,21 @@ i{
         .hidden {
             display: none;
         }
+.btn button{
+    font-weight: 700;
+    margin-left: 20px;
+    color: #397f3e;
+    padding: 9px 25px;
+    background: #fcf9ed;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+            
+}
+      
+.btn button:hover{
+    background: #fcf9ed;
+    color: #306b34;
+    transform: scale(1.1);
+}
