--- a/css/Carrusel.css
+++ b/css/Carrusel.css
@@ -67,7 +67,7 @@
   text-transform: capitalize;
   border: none;
   outline: none;
-  background: #ffffff;
+  background: #fcf9ed;
   border-radius: 5px;
   transition: 0.5s;
   cursor: pointer;
