--- a/css/carrito.css
+++ b/css/carrito.css
@@ -77,6 +77,7 @@ main {
     transition: all 0.3s ease 0s;
 
 }.boton:hover{
+    transform: scale(1.1);
     background: #fcf9ed;
     color: #306b34;
 }
@@ -89,3 +90,4 @@ i:hover{
     transform: scale(1.1);
     color: #306b34;
 }
+
