--- a/css/fuentes.css
+++ b/css/fuentes.css
@@ -29,8 +29,9 @@
 }
 
 .carta {
-    box-shadow: 2px 2px 10px #3d3c3c;
+    
     height: 102%;
     padding: 4%;
     border-radius: 20px;
+    box-shadow: 2px 2px 10px #000;
 }
