--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,9 @@ i{
 
 }
 .carrito {
-    font-size: 20px;
+    font-size: 30px;
     align-items: center;
-    color: #397f3e;
+    color: #fcf9ed;
     padding: 10px;
 
 
@@ -69,6 +69,13 @@ input{
    
     transform: scale(1.1);
 
+}
+.botonc{
+   text-align: center;
+    padding: 9px 20px;
+    background: #397f3e;
+    border: none;
+    cursor: pointer;
 }
 .header .btn button{
     font-weight: 700;
