--- a/css/fuentes.css
+++ b/css/fuentes.css
@@ -29,9 +29,14 @@
 }
 
 .carta {
-    
     height: 102%;
     padding: 4%;
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px #000;
+    box-shadow:1px 1px 7px #4d4c4c ;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+}
+.carta:hover{
+    transform: scale(1.1);
+    box-shadow: 3px 3px 13px #000;
+    
 }
