--- a/css/styles.css
+++ b/css/styles.css
@@ -71,12 +71,13 @@ input{
 
 }
 .botonc{
-     background: #fcf9ed;
-     border: none;
-     border-radius: 30px;
-     width: 50px;
-     height: 50px;
-     transition: all 0.3s ease 0s;
+    background: #fcf9ed;
+    border: none;
+    border-radius: 30px;
+    width: 50px;
+    height: 50px;
+    transition: all 0.3s ease 0s;
+    margin-right: 4px;
 }
 .botonc:hover{
     transform: scale(1.1);
