--- a/css/carrito.css
+++ b/css/carrito.css
@@ -130,3 +130,40 @@ i:hover{
     color: #fcf9ed;
     border: none;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: #fcf9ed;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    width: 300px;
+}
+
+/* Estilo para el botón de cerrar */
+.close-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #7ec986;
+    color: #306b34;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    background-color: #fcf9ed;
+}
